fixed menu misalign in fullscreen glitch

--- a/style.scss
+++ b/style.scss
@@ -29,8 +29,10 @@ nav {
         color: $textcolor;
       }
       ul{
-        margin: 0;
-        padding-top: 50%;    
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);  
         text-align: center;
         list-style: none;
     }
@@ -51,9 +53,9 @@ nav {
     }
   }
   .menu.active{
-    left: 0;
-    overflow: auto;
-}
+      left: 0;
+      overflow: auto;
+  }
 }
 
 body {
